--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -29,6 +29,8 @@ spec:
         secret:
           secretName: trawler
       hostNetwork: true
+      imagePullSecrets:
+       - name: apiconnect-image-pull-secret
       dnsPolicy: ClusterFirstWithHostNet
       hostPID: true
       tolerations:
@@ -40,7 +42,7 @@ spec:
         env:  
         - name: NAME
           value: "value"
-        image: trawler
+        image: apic-dev-docker-local.artifactory.swg-devops.com/velox/master/trawler:latest
         imagePullPolicy: Always
         securityContext:
           privileged: false
