--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -33,6 +33,7 @@ spec:
        - name: apiconnect-image-pull-secret
       dnsPolicy: ClusterFirstWithHostNet
       hostPID: true
+      serviceAccount: trawler
       tolerations:
         - effect: NoSchedule
           key: node-role.kubernetes.io/master
