--- a/deployment/kustomization.yaml
+++ b/deployment/kustomization.yaml
@@ -7,5 +7,8 @@ configMapGenerator:
   - secret.yaml
 resources:
 - deployment.yaml
+- serviceaccount.yaml
+- clusterrole.yaml
+- clusterrolebinding.yaml
 
 namespace: apic-monitoring
