Add trawling of basic Product stats (#2)
* First pass at product metric gathering
* Re-use of nets is better for the environment
* Name using _total not _count as per the prometheus best practises

--- a/deployment/clusterrolebinding.yaml
+++ b/deployment/clusterrolebinding.yaml
@@ -4,8 +4,7 @@ metadata:
   name: trawler
 subjects:
 - kind: ServiceAccount
-  name: default
-  namespace: default
+  name: trawler
 roleRef:
   kind: ClusterRole
   name: trawler
