Remove un-needed deployment items  - secret.yaml  - hostNetwork

--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -28,7 +28,7 @@ spec:
       - name: trawler-secrets
         secret:
           secretName: trawler
-      hostNetwork: true
+      hostNetwork: false
       dnsPolicy: ClusterFirstWithHostNet
       hostPID: true
       serviceAccount: trawler
