Add analytics net (#4)
* Add analytics net

* more test improvements

* mock v5c check

* v5c test

--- a/deployment/config.yaml
+++ b/deployment/config.yaml
@@ -15,3 +15,6 @@ nets:
     enabled: true
     username: trawler-monitor
     namespace: apic-management
+  analytics:
+    enabled: true
+    namespace: apic-analytics
