Adjust analytics to use certs rather than exec

--- a/deployment/clusterrole.yaml
+++ b/deployment/clusterrole.yaml
@@ -4,5 +4,5 @@ metadata:
   name: trawler
 rules:
 - apiGroups: [""]
-  resources: ["pods","services"]
+  resources: ["pods","services","secrets"]
   verbs: ["get","list"]
