--- a/deployment/servicemonitor.yaml
+++ b/deployment/servicemonitor.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    app.kubernetes.io/name: trawler
+    app: trawler
   name: trawler
 spec:
   endpoints:
@@ -11,4 +11,4 @@ spec:
   jobLabel: trawler
   selector:
     matchLabels:
-      app.kubernetes.io/name: trawler
+      app: trawler
