--- a/deployment/config.yaml
+++ b/deployment/config.yaml
@@ -4,7 +4,7 @@ prometheus:
   enabled: true
 nets:
   datapower:
-    enabled: false
+    enabled: true
     username: admin
     namespace: apic-gateway
   manager:
