--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -28,6 +28,7 @@ spec:
       - name: trawler-secrets
         secret:
           secretName: trawler
+          optional: true
       hostNetwork: false
       dnsPolicy: ClusterFirstWithHostNet
       hostPID: true
