--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: trawler
+  IMAGE_NAME: apiconnect-trawler
 
 jobs:
   # Run tests.
