--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 requests = "*"
-cryptography = "*"
+cryptography = "==3.2"
 rsa = ">=4.7"
 kubernetes = "*"
 click = "*"
@@ -30,4 +30,4 @@ python-coveralls = "*"
 pytest-catchlog = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.9"
