--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,5 +47,6 @@ jobs:
         id: push-to-ghcr
         uses: redhat-actions/push-to-registry@v2
         with:
+          registry: "ghcr.io"
           image: ${{ steps.build-image.outputs.image }}
           tags: ${{ steps.build-image.outputs.tags }}
