--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,16 +27,12 @@ jobs:
       - name: Clone the repository
         uses: actions/checkout@v2
         
-      - name: Get the version
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-
       - name: Buildah Action
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
           image: ${{ env.IMAGE_NAME }}
-          tags: latest ${{ env.VERSION }}
+          tags: latest ${{ github.ref_name }}
           containerfiles: |
             ./Containerfile
 
