--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -1,5 +1,3 @@
-### WARNING: this file is supported from Sysdig Agent 0.80.0
-# apiVersion: extensions/v1beta1  # If you are in Kubernetes version 1.8 or less please use this line instead of the following one
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -38,7 +36,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: trawler
-        image: rickymoorhouse/trawler:latest
+        image: ghcr.io/ibm/apiconnect-trawler/trawler:main
         imagePullPolicy: Always
         securityContext:
           allowPrivilegeEscalation: false
