add apiconnect API groups to clusterrole
Signed-off-by: Alexandros Phinikarides <alexandros.phinikarides@bankofcyprus.com>

--- a/deployment/clusterrole.yaml
+++ b/deployment/clusterrole.yaml
@@ -6,3 +6,15 @@ rules:
 - apiGroups: [""]
   resources: ["pods","services","secrets"]
   verbs: ["get","list"]
+- apiGroups: ["management.apiconnect.ibm.com"]
+  resources: ["managementclusters"]
+  verbs: ["get","list"]
+- apiGroups: ["analytics.apiconnect.ibm.com"]
+  resources: ["analyticsclusters"]
+  verbs: ["get","list"]
+- apiGroups: ["gateway.apiconnect.ibm.com"]
+  resources: ["gatewayclusters"]
+  verbs: ["get","list"]
+- apiGroups: ["portal.apiconnect.ibm.com"]
+  resources: ["portalclusters"]
+  verbs: ["get","list"]
