feat: re-instate support for username/password and log level
This will require a secret containing client_id, client_secret, username, password and realm

Also improving the docs and sample manifests for installation

For https://github.com/IBM/apiconnect-trawler/issues/109

Signed-off-by: Ricky Moorhouse <moorh@uk.ibm.com>

--- a/deployment/config.yaml
+++ b/deployment/config.yaml
@@ -1,16 +1,30 @@
 # Example configuration file
 prometheus:
-  port: 63512 
+  port: 63512
   enabled: true
+logging:
+  level: info
 nets:
+  apiconnect:
+    enabled: true
+  analytics:
+    enabled: true
+    namespace: analytics-namespace
+  certificates:
+    enabled: true
+    frequency: 600        
   datapower:
     enabled: true
     username: admin
-    namespace: apic
+    namespace: gateway-namespace
+    api_tests:
+      enabled: false
+      apis:
+        - name: testapi
+          path: /porg/catalog/test
+          method: get
+          headers: {}
   manager:
     enabled: true
-    username: admin
-    namespace: apic
-  analytics:
-    enabled: true
-    namespace: apic
+    process_org_metrics: false
+    namespace: manager-apic
