--- a/deployment/clusterrole.yaml
+++ b/deployment/clusterrole.yaml
@@ -1,20 +1,28 @@
-kind: ClusterRole
+---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
   name: trawler
 rules:
-- apiGroups: [""]
-  resources: ["pods","services","secrets"]
-  verbs: ["get","list"]
-- apiGroups: ["management.apiconnect.ibm.com"]
-  resources: ["managementclusters"]
-  verbs: ["get","list"]
-- apiGroups: ["analytics.apiconnect.ibm.com"]
-  resources: ["analyticsclusters"]
-  verbs: ["get","list"]
-- apiGroups: ["gateway.apiconnect.ibm.com"]
-  resources: ["gatewayclusters"]
-  verbs: ["get","list"]
-- apiGroups: ["portal.apiconnect.ibm.com"]
-  resources: ["portalclusters"]
-  verbs: ["get","list"]
+  - apiGroups:
+      - ''
+    resources:
+      - pods
+      - services
+      - secrets
+    verbs:
+      - get
+      - list
+  - apiGroups:
+      - management.apiconnect.ibm.com
+      - portal.apiconnect.ibm.com
+      - gateway.apiconnect.ibm.com
+      - analytics.apiconnect.ibm.com
+    resources:
+      - managementclusters
+      - analyticsclusters
+      - portalclusters
+      - gatewayclusters
+    verbs:
+      - get
+      - list
