--- a/deployment/kustomization.yaml
+++ b/deployment/kustomization.yaml
@@ -1,18 +1,21 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 configMapGenerator:
-- name: trawler
+- name: trawler-config
   files:
   - config.yaml
 resources:
+- certificate.yaml
 - deployment.yaml
 - serviceaccount.yaml
 - clusterrole.yaml
 - clusterrolebinding.yaml
-# Uncomment secret.yaml if you have set passwords in it
-# - secret.yaml
+- networkpolicy_trawler-a7s.yaml
+- networkpolicy_trawler.yaml
+- secret-mgmt.yaml
+- secret-dp.yaml
 #  Uncomment the following if you are using prometheus-operator
 # - service.yaml
 # - servicemonitor.yaml
 
-namespace: apic-monitoring
+namespace: apic
