feat: enable CA cert checking for datapower & add docs
Signed-off-by: Ricky Moorhouse <moorh@uk.ibm.com>

--- a/deployment/config.yaml
+++ b/deployment/config.yaml
@@ -18,8 +18,10 @@ nets:
     enabled: true
     username: admin
     namespace: gateway-namespace
+    insecure: true
     api_tests:
       enabled: false
+      insecure: true
       apis:
         - name: testapi
           path: /porg/catalog/test
